objects/TASKRAY__trRecordTypeMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TASKRAY__Assoc_Task_Record_Type_Id__c</fullName>
        <externalId>true</externalId>
        <label>Mapped Task Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Field_Set_Name__c</fullName>
        <externalId>true</externalId>
        <label>Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Record_Type_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Type Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>TaskRay Record Type Mapping</label>
</CustomObject>